Archive2/41/d20290a25112dd/output
..........................


standard c++ (-std=c++11)
------------------------------
Using built-in specs.
COLLECT_GCC=g++-4.8
COLLECT_LTO_WRAPPER=/usr/lib/gcc/x86_64-linux-gnu/4.8/lto-wrapper
Target: x86_64-linux-gnu
Configured with: ../src/configure -v --with-pkgversion='Ubuntu 4.8.1-2ubuntu1~12.04' --with-bugurl=file:///usr/share/doc/gcc-4.8/README.Bugs --enable-languages=c,c++,java,go,d,fortran,objc,obj-c++ --prefix=/usr --program-suffix=-4.8 --enable-shared --enable-linker-build-id --libexecdir=/usr/lib --without-included-gettext --enable-threads=posix --with-gxx-include-dir=/usr/include/c++/4.8 --libdir=/usr/lib --enable-nls --with-sysroot=/ --enable-clocale=gnu --enable-libstdcxx-debug --enable-libstdcxx-time=yes --enable-gnu-unique-object --enable-plugin --with-system-zlib --disable-browser-plugin --enable-java-awt=gtk --enable-gtk-cairo --with-java-home=/usr/lib/jvm/java-1.5.0-gcj-4.8-amd64/jre --enable-java-home --with-jvm-root-dir=/usr/lib/jvm/java-1.5.0-gcj-4.8-amd64 --with-jvm-jar-dir=/usr/lib/jvm-exports/java-1.5.0-gcj-4.8-amd64 --with-arch-directory=amd64 --with-ecj-jar=/usr/share/java/eclipse-ecj.jar --enable-objc-gc --enable-multiarch --disable-werror --with-arch-32=i686 --with-abi=m64 --with-multilib-list=m32,m64 --with-tune=generic --enable-checking=release --build=x86_64-linux-gnu --host=x86_64-linux-gnu --target=x86_64-linux-gnu
Thread model: posix
gcc version 4.8.1 (Ubuntu 4.8.1-2ubuntu1~12.04) 
COLLECT_GCC_OPTIONS='-v' '-std=c++11' '-Wall' '-Wextra' '-pedantic-errors' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 /usr/lib/gcc/x86_64-linux-gnu/4.8/cc1plus -quiet -v -imultilib . -imultiarch x86_64-linux-gnu -D_GNU_SOURCE main.cpp -quiet -dumpbase main.cpp -mtune=generic -march=x86-64 -auxbase main -Wall -Wextra -pedantic-errors -std=c++11 -version -fstack-protector -o /tmp/ccoKvkuE.s
GNU C++ (Ubuntu 4.8.1-2ubuntu1~12.04) version 4.8.1 (x86_64-linux-gnu)
	compiled by GNU C version 4.8.1, GMP version 5.0.2, MPFR version 3.1.0-p3, MPC version 0.9
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
ignoring duplicate directory "/usr/include/x86_64-linux-gnu/c++/4.8"
ignoring nonexistent directory "/usr/local/include/x86_64-linux-gnu"
ignoring nonexistent directory "/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../x86_64-linux-gnu/include"
#include "..." search starts here:
#include <...> search starts here:
 /usr/include/c++/4.8
 /usr/include/x86_64-linux-gnu/c++/4.8/.
 /usr/include/c++/4.8/backward
 /usr/lib/gcc/x86_64-linux-gnu/4.8/include
 /usr/local/include
 /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed
 /usr/include/x86_64-linux-gnu
 /usr/include
End of search list.
GNU C++ (Ubuntu 4.8.1-2ubuntu1~12.04) version 4.8.1 (x86_64-linux-gnu)
	compiled by GNU C version 4.8.1, GMP version 5.0.2, MPFR version 3.1.0-p3, MPC version 0.9
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
Compiler executable checksum: 227d7ccf008db5ae401be7ddcc6b4746
COLLECT_GCC_OPTIONS='-v' '-std=c++11' '-Wall' '-Wextra' '-pedantic-errors' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 as -v --64 -o /tmp/ccqCMqJz.o /tmp/ccoKvkuE.s
GNU assembler version 2.22 (x86_64-linux-gnu) using BFD version (GNU Binutils for Ubuntu) 2.22
COMPILER_PATH=/usr/lib/gcc/x86_64-linux-gnu/4.8/:/usr/lib/gcc/x86_64-linux-gnu/4.8/:/usr/lib/gcc/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/4.8/:/usr/lib/gcc/x86_64-linux-gnu/
LIBRARY_PATH=/usr/lib/gcc/x86_64-linux-gnu/4.8/:/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../lib/:/lib/x86_64-linux-gnu/:/lib/../lib/:/usr/lib/x86_64-linux-gnu/:/usr/lib/../lib/:/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../:/lib/:/usr/lib/
COLLECT_GCC_OPTIONS='-v' '-std=c++11' '-Wall' '-Wextra' '-pedantic-errors' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 /usr/lib/gcc/x86_64-linux-gnu/4.8/collect2 --sysroot=/ --build-id --eh-frame-hdr -m elf_x86_64 --hash-style=gnu --as-needed -dynamic-linker /lib64/ld-linux-x86-64.so.2 -z relro /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../x86_64-linux-gnu/crt1.o /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../x86_64-linux-gnu/crti.o /usr/lib/gcc/x86_64-linux-gnu/4.8/crtbegin.o -L/usr/lib/gcc/x86_64-linux-gnu/4.8 -L/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../x86_64-linux-gnu -L/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../lib -L/lib/x86_64-linux-gnu -L/lib/../lib -L/usr/lib/x86_64-linux-gnu -L/usr/lib/../lib -L/usr/lib/gcc/x86_64-linux-gnu/4.8/../../.. /tmp/ccqCMqJz.o -lstdc++ -lm -lgcc_s -lgcc -lc -lgcc_s -lgcc /usr/lib/gcc/x86_64-linux-gnu/4.8/crtend.o /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../x86_64-linux-gnu/crtn.o
g++ ok
clang++ ok.

legacy standard c++ (-std=c++98)
------------------------------
main.cpp: In function ‘int main()’:
main.cpp:86:74: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[0] = {"Susan Meyers", 47899, "Accounting", "Vice President"}; 
                                                                          ^
main.cpp:86:18: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[0] = {"Susan Meyers", 47899, "Accounting", "Vice President"}; 
                  ^
main.cpp:87:60: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[1] = {"Mark Jones", 39119, "IT", "Programmer"};
                                                            ^
main.cpp:87:18: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[1] = {"Mark Jones", 39119, "IT", "Programmer"};
                  ^
main.cpp:88:69: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[2] = {"Joy Rogers", 81774, "Manufacturing", "Engineer"};
                                                                     ^
main.cpp:88:18: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[2] = {"Joy Rogers", 81774, "Manufacturing", "Engineer"};
                  ^
main.cpp:86:20: error: expected expression
    employees[0] = {"Susan Meyers", 47899, "Accounting", "Vice President"}; 
                   ^
main.cpp:87:20: error: expected expression
    employees[1] = {"Mark Jones", 39119, "IT", "Programmer"};
                   ^
main.cpp:88:20: error: expected expression
    employees[2] = {"Joy Rogers", 81774, "Manufacturing", "Engineer"};
                   ^
3 errors generated.

non-standard (g++/clang++ default)
------------------------------
main.cpp: In function ‘int main()’:
main.cpp:86:74: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[0] = {"Susan Meyers", 47899, "Accounting", "Vice President"}; 
                                                                          ^
main.cpp:86:18: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[0] = {"Susan Meyers", 47899, "Accounting", "Vice President"}; 
                  ^
main.cpp:87:60: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[1] = {"Mark Jones", 39119, "IT", "Programmer"};
                                                            ^
main.cpp:87:18: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[1] = {"Mark Jones", 39119, "IT", "Programmer"};
                  ^
main.cpp:88:69: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[2] = {"Joy Rogers", 81774, "Manufacturing", "Engineer"};
                                                                     ^
main.cpp:88:18: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     employees[2] = {"Joy Rogers", 81774, "Manufacturing", "Engineer"};
                  ^
main.cpp:86:20: error: expected expression
    employees[0] = {"Susan Meyers", 47899, "Accounting", "Vice President"}; 
                   ^
main.cpp:87:20: error: expected expression
    employees[1] = {"Mark Jones", 39119, "IT", "Programmer"};
                   ^
main.cpp:88:20: error: expected expression
    employees[2] = {"Joy Rogers", 81774, "Manufacturing", "Engineer"};
                   ^
3 errors generated.
